# rocq-ml-toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
base-image/coq-lsp/: Dockerfile
docker/: docker-compose.yaml
docker/config/: rocq-test.yaml
docker/coq-lsp/: Dockerfile
docker/coq-server/: Dockerfile
docker/rocq-lsp/: Dockerfile
docker/rocq-server/: Dockerfile
examples/: foo.v
examples/docker/: base.yaml
examples/putnam-agent/: README.md  run_batch_kimi_openrouter.py  run_docq_agent_openrouter.py  test_docq_agent.py  test_pydantic_agent.py
examples/putnam-agent/agent/: __init__.py  doc_manager.py  docq_agent.py  docstring_tools.py  library_tools.py  pydantic_agent.py
examples/putnam-agent/mcp/: README.md  __init__.py  docq_fastmcp.py  test_client.py
examples/putnam-agent/putnam/coquelicot/: putnam_1973_b2.v  putnam_1989_a3.v  putnam_2005_a3.v  putnam_2018_b2.v  putnam_2021_a4.v  putnam_2022_a6.v
examples/putnam-agent/putnam/geocoq/: putnam_1963_b6.v  putnam_1965_b6.v  putnam_1972_b5.v  putnam_2009_a1.v  putnam_2022_b2.v
examples/putnam-agent/putnam/mathcomp/: putnam_1962_a2.v  putnam_1962_a4.v  putnam_1962_a5.v  putnam_1962_a6.v  putnam_1962_b2.v  putnam_1962_b5.v  putnam_1963_a2.v  putnam_1963_a4.v  putnam_1963_b1.v  putnam_1963_b2.v  putnam_1963_b3.v  putnam_1963_b5.v  putnam_1964_a1.v  putnam_1964_a2.v  putnam_1964_a4.v  putnam_1964_a5.v  putnam_1964_a6.v  putnam_1964_b1.v  putnam_1964_b2.v  putnam_1964_b3.v  putnam_1964_b5.v  putnam_1964_b6.v  putnam_1965_a4.v  putnam_1965_a6.v  putnam_1965_b2.v  putnam_1965_b4.v  (+146 more)
examples/safeverify/: README.md  _CoqProject
examples/safeverify/nontrivial/: Source.v  TargetAdmitted.v  TargetBadStatement.v  TargetGood.v
examples/safeverify/whitelist/: Source.v  TargetNeedsWhitelist.v  whitelist.json
inference_server/: app.py  client.py  gunicorn.config.py  redis_keys.py  sessions.py
notebooks/: coq-corn.yaml  docker.ipynb  itp.ipynb  scrapping.ipynb
script/: client_ml.py  docker.py  parser.py  perf.py  pet.py  replay.py  validity.py
src/rocq_ml_toolbox/docker/: README.md  __init__.py  cli.py  config.py  docker.py  matches.py  opam_docker.py  rocq_docker.py
src/rocq_ml_toolbox/inference/: README.md  ZYGOTE_V1_DESIGN.md  __init__.py  arbiter.py  cli.py  client.py  file_api.py  gunicorn_config.py  logging_config.yaml  redis_keys.py  rpc_registry.py  server.py  session_model.py  sessions.py
src/rocq_ml_toolbox/mcp/: client.py  explore.py  inference.py  navigation.py
src/rocq_ml_toolbox/parser/: README.md  __init__.py  ast_utils.py  parser.py  rocq_parser.py  tiny_rocq_parser.py
src/rocq_ml_toolbox/rocq_lsp/: README.md  client.py  endpoint.py  json_rpc_endpoint.py  protocol.atd  protocol.py  structs.py
src/rocq_ml_toolbox/safeverify/: __init__.py  cli.py  core.py  types.py
tests/: conftest.py  pytest_toprove.json  test_api.py  test_inference_client_extended.py  test_inference_file_api.py  test_inference_reliability.py  test_parser.py  test_parser_driver.py  test_safeverify.py  test_stress.py
(+17 files in other folders)
