[project]
name = "rocq_ml_toolbox"
version = "0.0.3"
description = "A Rocq ML Toolbox to scrap dataset and do inference at scale."
authors = [
    {name = "Théo Stoskopf", email = "theo.stoskopf@inria.fr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rocq-ml-server = "rocq_ml_toolbox.inference.cli:main"

[project.optional-dependencies]
parser = []
server = ["flask", "gunicorn", "psutil", "redis", "requests"] # pytanque
docker = ["docker", "pyyaml", "requests"]
client = ["requests"]
all = ["docker", "flask", "gunicorn", "psutil", "pyyaml", "redis", "requests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rocq_ml_toolbox*"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest",
    "datasets"
]
