[project]
name = "rocq_ml_toolbox"
version = "0.0.5"
description = "A Rocq ML Toolbox to scrap dataset and do inference at scale."
authors = [
    {name = "Théo Stoskopf", email = "theo.stoskopf@inria.fr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rocq-ml-server = "rocq_ml_toolbox.inference.cli:main"
rocq-ml-safeverify = "rocq_ml_toolbox.safeverify.cli:main"

[project.optional-dependencies]
parser = []
safeverify = ["pyyaml"]
server = ["fastapi", "psutil", "redis", "requests", "uvicorn", "setproctitle"] # pytanque
docker = ["docker", "pyyaml", "requests"]
client = ["requests"]
all = ["docker", "fastapi", "psutil", "pyyaml", "redis", "requests", "uvicorn", "setproctitle"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rocq_ml_toolbox*"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest",
    "datasets"
]
